Fix wrapping issue on wordpress pricing header (#26358)
Current styles caused overflow on smaller displays or longer translations, as well as the smaller icons to not show. This change supports wrapping of the text
Revert "Fix wrapping issue on wordpress pricing header"

This reverts commit 0cc34a000a798f8d4e16591adb94f618058954b9.
Fix wrapping issue on wordpress pricing header

--- a/client/my-sites/plan-features/style.scss
+++ b/client/my-sites/plan-features/style.scss
@@ -250,8 +250,7 @@ $plan-features-sidebar-width: 272px;
 	font-style: italic;
 	font-weight: 400;
 	color: $gray-text-min;
-	line-height: 0.6;
-	white-space: nowrap;
+	line-height: normal;
 
 	&.is-placeholder {
 		@include placeholder( 23% );
